--- a/src/Sustain/AppBundle/Resources/views/layout.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/layout.html.twig
@@ -11,19 +11,22 @@
 
 {% block sidebar %}
     {% if tags is defined %}
-        <h2  style="font-size: medium">Labels</h2>
+        <h2 style="font-size: medium">Labels</h2>
         {% for tag in tags %}
-        {%  if 'file' in app.request.attributes.get('_route') %}
-            <a href="{{ path('files_by_tag', {'tag': tag.id}) }}"><span class="label label-default margin-right" style="background-color: {{ tag.color }};
-                        ">{{ tag.name }}</span></a>
+            {% if 'file' in app.request.attributes.get('_route') %}
+                <a href="{{ path('files_by_tag', {'tag': tag.id}) }}"><span class="label label-default margin-right" style="background-color: {{ tag.color }};
+                            ">{{ tag.name }}</span></a>
+            {% elseif 'module' in app.request.attributes.get('_route') %}
+                <a href="{{ path('modules_by_tag', {'tag': tag.id}) }}"><span class="label label-default margin-right" style="background-color: {{ tag.color }};
+                            ">{{ tag.name }}</span></a>
             {% else %}
-            <span class="label label-default margin-right" style="background-color: {{ tag.color }};">{{ tag.name }}</span>
+                <span class="label label-default margin-right" style="background-color: {{ tag.color }};">{{ tag.name }}</span>
             {% endif %}
         {% endfor %}
     {% endif %}
 
     {% if is_granted('ROLE_ADMIN') %}
-        <h2  style="font-size: medium">Admin</h2>
+        <h2 style="font-size: medium">Admin</h2>
         <ul class="list-unstyled">
             <li><a href="{{ path('tag') }}"> Labels</a></li>
             <li><a href="{{ path('sample') }}"> Samples</a></li>
