--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -46,6 +46,7 @@
                 <li><a  href="{{ path('objective') }}"> Objectives</a></li>
                 <li><a  href="{{ path('module') }}"> Modules</a></li>
                 <li><a  href="{{ path('mapset') }}"> Maps</a></li>
+                <li><a href="{{ path('sample') }}"> Samples</a></li>
             </ul>
 
             <ul class="nav navbar-nav navbar-right">
