--- a/src/Sustain/AppBundle/Resources/views/layout.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/layout.html.twig
@@ -37,6 +37,9 @@
             <li><a href="{{ path('file') }}"> List Resources</a></li>
             <li><a id='file_new_upload' title='Upload document' href="{{ path('file_new') }}"><i class="glyphicon glyphicon-upload"></i> Upload file</a></li>
             <hr/>
+            <li><a href="{{ path('activity') }}"> List Activities</a></li>
+            <li><a title='New Activity' href="{{ path('activity_new') }}">New Activity</a></li>
+            <hr/>
             <li><a href="{{ path('mapset') }}"> List Maps</a></li>
             <li><a href="{{ path('mapset_new') }}">New Map</a></li>
             <li><a href="{{ path('map') }}"> List Map Points</a></li>
