--- a/src/Sustain/AppBundle/Resources/views/Module/show.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Module/show.html.twig
@@ -56,6 +56,43 @@
         </tbody>
     </table>
 
+    <h2>Activities</h2>
+
+    <table id="file_list" class="col-sm-12 table">
+        <thead>
+        <tr>
+            <th><span>Title</span></th>
+            <th class="hidden-xs">Labels</th>
+        </tr>
+        </thead>
+        <tbody>
+
+        {% for entity in entity.activities %}
+            <tr>
+                <td>
+                    {{ entity.title }}
+                    {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
+                        {% if entity.isOwner(app.user.username) or is_granted('ROLE_ADMIN') %}
+                            <a class="pull-right" href="{{ path('activity_edit', { 'id': entity.id}) }}" title="Edit {{ entity.title }}">
+                                Settings
+                            </a>
+                        {% endif %}
+                    {% endif %}
+                    {{ entity.description|raw }}
+                </td>
+                <td class="labels hidden-xs">
+                    {% for tag in entity.tags %}
+                        <span class="label label-default margin-right" style="background-color: {{ tag.color }};">
+                                {{ tag.name }}
+                                </span>
+                    {% endfor %}
+                </td>
+            </tr>
+
+        {% endfor %}
+        </tbody>
+    </table>
+
     <h1>Maps</h1>
     <div class="list-group">
         {% for entity in entity.mapsets %}
