--- a/src/Sustain/AppBundle/Resources/views/Page/index.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Page/index.html.twig
@@ -7,6 +7,7 @@
         <thead>
             <tr>
                 <th>Menu Name</th>
+                <th>Section</th>
                 <th>Actions</th>
             </tr>
         </thead>
@@ -14,6 +15,7 @@
         {% for entity in entities %}
             <tr>
                 <td><a href="{{ path('page_show', { 'id': entity.id }) }}">{{ entity.menuName }}</a></td>
+                <td>{%  if entity.homepage == true %}Homepage{% endif %}</td>
                 <td>{% if is_granted('ROLE_ADMIN') %}<a class="btn btn-default" href="{{ path('page_edit', { 'id': entity.id }) }}">Edit</a>{% endif %}
                 </td>
             </tr>
