--- a/src/Sustain/UserBundle/Resources/views/User/new.html.twig
+++ b/src/Sustain/UserBundle/Resources/views/User/new.html.twig
@@ -1,15 +1,8 @@
 {% extends '::base.html.twig' %}
 
 {% block body -%}
-    <h1>User creation</h1>
+    <h1>Profile</h1>
 
     {{ form(form) }}
 
-        <ul class="record_actions">
-    <li>
-        <a href="{{ path('user') }}">
-            Back to the list
-        </a>
-    </li>
-</ul>
 {% endblock %}
