--- a/src/Sustain/AppBundle/Resources/views/Module/index.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Module/index.html.twig
@@ -6,15 +6,15 @@
     <div class="list-group">
         {% for entity in entities %}
             <a href="{{ path('module_show', { 'id': entity.id }) }}" class="list-group-item">
-                <p class="list-group-item-heading">{{ entity.name|raw }}
-                    {% for tag in entity.tags %}
-                        <span class="label label-default margin-right" style="background-color: {{ tag.color }};">
-                                {{ tag.name }}
-                                </span>
-                    {% endfor %}
-                </p>
+                <p class="list-group-item-heading">{{ entity.name|raw }}</p>
 
                 <p class="list-group-item-text">{{ entity.description|raw }}</p>
+
+                {% for tag in entity.tags %}
+                    <span class="label label-default margin-right" style="background-color: {{ tag.color }};">
+                                {{ tag.name }}
+                                </span>
+                {% endfor %}
             </a>
         {% endfor %}
     </div>
