--- a/src/Sustain/AppBundle/Resources/views/Objective/index.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Objective/index.html.twig
@@ -1,6 +1,11 @@
 {% extends 'AppBundle::layout.html.twig' %}
 
 {% block body -%}
+    <div class="alert alert-warning alert-dismissible" role="alert">
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <strong>How to use Objectives </strong>
+    </div>
+
     <h1>Learning Objectives</h1>
 
     <div class="list-group">
