--- a/src/Sustain/AppBundle/Resources/views/Mapset/index.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Mapset/index.html.twig
@@ -1,6 +1,12 @@
 {% extends 'AppBundle::layout.html.twig' %}
 
 {% block body -%}
+    <div class="alert alert-warning alert-dismissible" role="alert">
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <strong>How to use Maps </strong>
+    </div>
+
+
     <h1>Maps</h1>
     <div class="list-group">
         {% for entity in entities %}
