--- a/src/Sustain/AppBundle/Resources/views/layout.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/layout.html.twig
@@ -22,6 +22,9 @@
             {% elseif 'objective' in app.request.attributes.get('_route') %}
                 <a href="{{ path('objectives_by_tag', {'tag': tag.id}) }}"><span class="label label-default margin-right" style="background-color: {{ tag.color }};
                             ">{{ tag.name }}</span></a>
+            {% elseif 'activity' in app.request.attributes.get('_route') %}
+                <a href="{{ path('activities_by_tag', {'tag': tag.id}) }}"><span class="label label-default margin-right" style="background-color: {{ tag.color }};
+                            ">{{ tag.name }}</span></a>
             {% else %}
                 <span class="label label-default margin-right" style="background-color: {{ tag.color }};">{{ tag.name }}</span>
             {% endif %}
