--- a/src/Sustain/UserBundle/Resources/views/User/index.html.twig
+++ b/src/Sustain/UserBundle/Resources/views/User/index.html.twig
@@ -1,6 +1,11 @@
 {% extends '::base.html.twig' %}
 
 {% block body -%}
+    <div class="alert alert-warning alert-dismissible" role="alert">
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <strong>How to use Profiles </strong>
+    </div>
+
     <h1>Profiles</h1>
 
     <table class="table">
