--- a/src/Sustain/AppBundle/Resources/views/File/index.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/File/index.html.twig
@@ -1,9 +1,13 @@
 {% extends 'AppBundle::layout.html.twig' %}
 
+{% block title %}Resources{% endblock %}
+
 {% block body %}
-    <div class="alert alert-warning alert-dismissible" role="alert">
+    <h1>Resources</h1>
+
+    <div class="alert alert-info alert-dismissible" role="alert">
         <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <strong>How to use Resources </strong>
+        Resources consist of module activities, website resources, maps, background readings, and others. Click on the title to download.
     </div>
 
     <table id="file_list" class="col-sm-12 table">
