--- a/src/Sustain/UserBundle/Resources/views/User/index.html.twig
+++ b/src/Sustain/UserBundle/Resources/views/User/index.html.twig
@@ -1,12 +1,16 @@
 {% extends '::base.html.twig' %}
 
+{% block title %}Profiles{% endblock %}
+
 {% block body -%}
-    <div class="alert alert-warning alert-dismissible" role="alert">
+    <h1>Profiles</h1>
+
+    <div class="alert alert-info alert-dismissible" role="alert">
         <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <strong>How to use Profiles </strong>
+        Click on a name for the role of the Watershed UGA affiliate, research collaboration and opportunities, and contact information.
     </div>
 
-    <h1>Profiles</h1>
+
 
     <table class="table">
         <thead>
