--- a/src/Sustain/UserBundle/Resources/views/User/show.html.twig
+++ b/src/Sustain/UserBundle/Resources/views/User/show.html.twig
@@ -2,23 +2,26 @@
 
 {% block body -%}
 
-    {% if is_granted('ROLE_ADMIN') %}
-        <a class="btn btn-default pull-right" href="{{ path('user_edit', { 'id': entity.id }) }}">Edit</a>
-    {% endif %}
+    <div class="well col-sm-12">
+        {% if is_granted('ROLE_ADMIN') %}
+            <a class="btn btn-default pull-right" href="{{ path('user_edit', { 'id': entity.id }) }}">Edit</a>
+        {% endif %}
 
-    <h1>{{ entity.firstname }} {{ entity.lastname }}</h1>
+        <h1>{{ entity.firstname }} {{ entity.lastname }}</h1>
 
-    <img src="{{ entity.photo }}" class="pull-right img-rounded img-responsive" alt="Responsive image of {{ entity.firstname }} {{ entity.lastname }}">
-    <h2>Bio</h2>
-    {{ entity.bio|raw }}
-    <h2>School/College</h2>
-    {{ entity.college|raw }}
-    <h2>Research</h2>
-    {{ entity.research|raw }}
-    <h2>Involvement in WatershedUGA</h2>
-    {{ entity.involvement|raw }}
-    <hr/>
+        <img src="{{ entity.photo }}" class="pull-right img-rounded img-responsive" alt="Responsive image of {{ entity.firstname }} {{ entity.lastname }}">
+        <h2>Bio</h2>
+        {{ entity.bio|raw }}
+        <h2>School/College</h2>
+        {{ entity.college|raw }}
+        <h2>Research</h2>
+        {{ entity.research|raw }}
+        <h2>Involvement in WatershedUGA</h2>
+        {{ entity.involvement|raw }}
+        <hr/>
 
-    {% if entity.mentor == 0 %}<p><strong>I am willing to mentor CURO projects</strong></p>{% endif %}
+        {% if entity.mentor == 0 %}<p><strong>I am willing to mentor CURO projects</strong></p>{% endif %}
+    </div>
+
 
 {% endblock %}
