--- a/src/Sustain/AppBundle/Resources/public/css/local.css
+++ b/src/Sustain/AppBundle/Resources/public/css/local.css
@@ -1,5 +1,5 @@
 .full  {
-    background: url('/images/background.jpg') no-repeat center center fixed;
+    background: url('http://www.watershed.uga.edu/bundles/app/images/background.jpg') no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
